# naurok-test-backend

./: .cookies  .gitignore  .gitlab-ci.yml  .gitpod.yml  .woodpecker.yml  Dockerfile  README.md  app.py  bitbucket-pipelines.yml  data.html  download.py  key.py  link.txt  main.py  pyproject.toml  railway.toml  requirements.txt  test_app.py  test_download.py  test_key.py  vercel.json  wpa.conf
.github/workflows/: main.yml
.woodpecker/: deploy.yml  lint.yml  test.yml
cli/: app.py
core/: data.py  download.py  key.py
server/: app.py
static/: style.css
templates/: base.html  index.html  result.html
tests/: test_download.py  test_key.py
