[tool.poetry]
name = "naurok-test-backend"
version = "1.2.0"
description = "This project get requests for naurok tests"
authors = ["Ftc Serhiy <ftcserhiy@gmail.com>"]
readme = "README.md"
packages = [
	{include = "cli"},
	{include = "core"}
]
repository = "https://github.com/FtcSerhiy/naurok-test-backend.git"

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
requests = "^2.28.1"
hug = "^2.6.1"
gunicorn = "^20.1.0"
mypy = "^0.991"
rich = "^12.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "cli.app:main"